# py_demo

./: .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  requirements_dev.txt  setup.py
csrc/: CMakeLists.txt
csrc/py_demo/: CMakeLists.txt  _C.cpp
scripts/: cibuildwheel.sh
src/py_demo/: _C.pyi  __init__.py  method.py
src/py_demo/module/: __init__.py
src/py_sample/: method.py
src/py_sample/module/: function.py
src/sample/: __init__.py
src/sample/module/: function.py
tests/: test_csrc.py  test_method.py  test_module.py
