[project]
name = "py_demo"
dynamic = ["version"]
description = 'py_demo mixin Python & C++ project'
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "cmake",
    "ninja",
]
build-backend = "setuptools.build_meta"

# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
write_to = "src/py_demo/_version.py"

# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
minversion = "7.0.0"
pythonpath = 'tests'
testpaths = ["tests"]

# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 88
indent-width = 4
fix = true
exclude = [".cmake-format.py"]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-third-party = ["py_demo"]
order-by-type = true
