# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "py_demo"
description = 'py_demo'
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["numpy"]

# https://github.com/pypa/setuptools_scm
[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
    "wheel",
    "cmake",
    "ninja",
]
build-backend = "setuptools.build_meta"

# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
write_to = "src/py_demo/_version.py"

# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
minversion = "7.0.0"
pythonpath = 'tests'
testpaths = ["tests"]

# https://docs.astral.sh/ruff/settings/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
fix = true
exclude = [".cmake-format.py"]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-local-folder = ["src"]
required-imports = ["from __future__ import annotations"]

# TODO: support more ruff rules
# TODO: support more python tools
# TODO: support mypy
