# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "py_demo"
description = 'py_demo'
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["numpy"]

# https://github.com/pypa/setuptools_scm
[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
    "wheel",
    "cmake",
    "ninja",
]
build-backend = "setuptools.build_meta"

# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
write_to = "src/py_demo/_version.py"

# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
minversion = "7.0.0"
pythonpath = 'tests'
testpaths = ["tests"]

# https://docs.astral.sh/ruff/settings/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
fix = true
exclude = [".cmake-format.py"]

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-local-folder = ["src"]
required-imports = ["from __future__ import annotations"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
exclude = ['setup.py']
files = ["src/**/*.py", "tests/**/*.py"]

# https://cibuildwheel.pypa.io/en/stable/options/
[tool.cibuildwheel]
build = "cp311-macosx_arm64 cp312-macosx_arm64 cp311-manylinux* cp312-manylinux*"
skip = "i686* ppc64le* s390x*"

# TODO: support more ruff rules
# TODO: support more python tools
